# wasm-cam

./: .gitignore  Dockerfile  README.md  bling.js  build.sh  index.html  index.js  start.sh
client/public/: index.html  styles.css
client/public/js/: bling.js  main.js  util.js  web-cam.js
public/: index.html  index.js  styles.css
server/: index.js  package-lock.json  package.json
wasm/process-canvas/: Cargo.toml
wasm/process-canvas/src/: lib.rs  pixel.rs  transforms.rs
wasm/process-canvas/src/pixel/: mod.rs
wasm/process-canvas/src/transforms/: mod.rs
