[package]
name = "process-canvas"
version = "0.1.0"
authors = ["Jens Östlund <jostlund@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'ImageData',
  'Node',
  'Window'
]
