[package]
name = "process-canvas"
version = "0.1.0"
authors = ["Jens Östlund <jostlund@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData'
]

[profile.release]
lto = true
